<resources>
    <string name="app_name">Zivotinje</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log out</string>

    <string name="facebook_app_id">462103637974473</string>
    <string name="fb_login_protocol_scheme">fb462103637974473</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Opis">Opis</string>
    <string name="google_api">AIzaSyAyVddfVCAcVub30s1xsJLiaRCMx70EbtA</string>
    <string name="odaberi_slike">Odaberi slike</string>
    <string name="obrisi_slik">Obrisi sliku</string>
    <string name="naziv_sklonista">Naziv sklonista</string>
    <string name="adresa">Adresa</string>
    <string name="naziv_skloni_ta">Naziv skloništa</string>
    <!--<string name="adresa">Adresa</string>-->
    <string name="email_skloni_ta">Email skloništa</string>
    <string name="lozinka_min_6_znakova">Lozinka (min 6 znakova)</string>
    <string name="poka_i_lozinku">Pokaži lozinku</string>
    <string name="potvrdi_lozinku">Potvrdi lozinku</string>
    <string name="registriraj">Registriraj</string>
    <string name="opis">Opis</string>
    <string name="oznaka">Oznaka</string>
    <string name="ime">Ime</string>
    <string name="upload">Upload</string>
    <string name="spol">Spol:</string>
    <string name="m">M</string>
    <string name="Ž">Ž</string>
    <string name="M">M</string>
    <string name="status">Status:</string>
    <string name="neudomljen">Neudomljen</string>
    <string name="udomljen">Udomljen</string>
    <string name="pas">Pas</string>
    <string name="macka">Macka</string>
    <string name="pasmina">Pasmina</string>
    <string name="godine">Godine</string>
    <string name="god">god</string>
    <string name="mjeseci">Mjeseci</string>
    <string name="mj">mj</string>
    <string name="te_ina">Težina(kg)</string>
    <string name="kg">kg</string>
    <string name="gram">gram</string>
    <string name="g">g</string>
    <string name="log_in">Log in</string>
    <string name="starost_do">Starost(god) do:</string>
    <string name="pretra_i">Pretraži</string>
    <string name="oznaka_u_skloni_tu">Oznaka u skloništu</string>
    <string name="te_ina_do">Težina(kg) do:</string>
    <string name="ma_ka">Macka</string>
    <string name="resetiraj_lozinku">Resetiraj lozinku</string>
    <string name="broj_telefona">Broj telefona</string>
    <string name="registracija_skloni_ta">Registracija skloništa</string>
    <string name="korisnik">Korisnik</string>
    <string name="email">Email</string>
    <string name="ukratko_o_skloni_tu">Ukratko o skloništu</string>
    <string name="ne_to_o_nama">Nešto o nama:</string>
    <string name="spremi">Spremi</string>
    <string name="a_uriraj">Ažuriraj</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="video">Video</string>
    <string name="slike">Slike</string>
    <string name="skloni_te">Sklonište</string>
    <string name="izmjena">Izmjena</string>
    <string name="status_">Status</string>

</resources>
