<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditSkl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="297dp"
            app:cardCornerRadius="2dp"
            android:layout_margin="5dp">


            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="297dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"

                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" >


                <Button
                    android:id="@+id/button_choose_image"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:layout_marginLeft="115dp"
                    android:layout_marginTop="107dp"
                    android:layout_marginEnd="126dp"
                    android:layout_marginRight="126dp"
                    android:background="@android:color/transparent"
                    android:text="@string/odaberi_slike" />

                <TextView
                    android:id="@+id/obrisi_sliku"
                    android:layout_width="118dp"
                    android:layout_height="52dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/obrisi_slik"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </com.smarteist.autoimageslider.SliderView>
        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginRight="-2dp" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="144dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="264dp"
            android:layout_marginLeft="264dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/upload" />

        <EditText
            android:id="@+id/naziv_sk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/naziv_sklonista"
            android:autofillHints=""
            android:inputType="text" />


        <EditText

            android:id="@+id/opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/opis"
            android:inputType="textMultiLine"
            android:autofillHints=""
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="383dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/email_skl"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@+id/cardView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/email" />

    </RelativeLayout>

</ScrollView>