<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="0.20">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"

                android:contentDescription=""
                android:src="@mipmap/ic_launcher_round" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.65"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="4dp"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/ime_i_prezime"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/ic_envelope"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/send_email"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_email_"
                    android:visibility="gone"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:weightSum="0.15">

            <ImageButton
                android:id="@+id/edit_profile"
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_gravity="top|end"
                android:background="@color/transparent"
                android:gravity="top|end"
                android:src="@drawable/ic_mode_edit"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/uplodaj_profil"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="center"
                style="?attr/materialButtonOutlinedStyle"

                android:text="@string/a_uriraj"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:ignore="SmallSp" />

        </LinearLayout>


    </LinearLayout>

    <Switch
        android:id="@+id/prati_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Notifikacije za praćenje" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicatorColor="#2196F3" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.viewpager.widget.ViewPager>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>